add: desktop completion

--- a/src/view/how-it-work'/component/header/styles.module.scss
+++ b/src/view/how-it-work'/component/header/styles.module.scss
@@ -75,11 +75,6 @@
       justify-content: space-between;
       width: 100%;
       gap: 40px;
-
-      //   &:nth-child(even) {
-      //     flex-direction: row-reverse;
-      //   }
-
       .imgContent,
       .imgContentFrame,
       .imgContentTicket {
@@ -97,11 +92,6 @@
         img {
           width: 100%;
           height: auto;
-        }
-      }
-
-      .imgContentTicket {
-        img {
         }
       }
 
@@ -183,7 +173,30 @@
       width: 100%;
       border-radius: 40px;
       height: 652px;
-      border: 1px solid red;
+      position: relative;
+      border-radius: 40px;
+
+      // border: 1px solid red;
+    }
+    .spliceImage::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      border: 3.16px solid transparent;
+      border-radius: 42.13px;
+      // border-bottom: none;
+      border-image: linear-gradient(
+          151.22deg,
+          #b49017 10.91%,
+          #59928c 59.05%,
+          #e3e3e3 107.19%
+        )
+        1;
+      border-image-slice: 1;
+      pointer-events: none;
     }
   }
   .wrapper_third {
