--- a/src/component/listing/styles.module.scss
+++ b/src/component/listing/styles.module.scss
@@ -1,13 +1,38 @@
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  .results {
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 40px;
+    overflow: hidden;
+    height: 287px;
+  }
+  .row {
     display: flex;
     flex-direction: column;
-    gap: 32px;
-    .results {
-        
-        
-
-    } 
-    .row {
-
+    gap: 8px;
+    h4 {
+      font-family: Inter;
+      font-weight: 400;
+      font-style: Regular;
+      font-size: 25px;
+      line-height: 114%;
+      letter-spacing: -3%;
+      vertical-align: middle;
+      background: linear-gradient(88.33deg, #001914 32.65%, #69958c 98.59%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
+    p {
+      font-family: Inter;
+      font-weight: 400;
+      font-style: Regular;
+      font-size: 16px;
+      line-height: 166%;
+      letter-spacing: -2%;
+      vertical-align: middle;
+    }
+  }
 }
