--- a/src/component/tool/styles.module.scss
+++ b/src/component/tool/styles.module.scss
@@ -2,16 +2,14 @@
   background-image: url("../../../public/Advert-img.png");
   background-repeat: no-repeat;
   background-size: cover;
-  // opacity: 2%
   overflow: hidden;
   object-fit: cover;
-  // position: relative;
   border-radius: 34px;
   background-color: #fff;
-  // scale: tile;
+  opacity: 80%;
   .overlay {
     width: 100%;
-    height: 525px;
+    min-height: 525px;
     position: relative;
     background-color: rgba(255, 255, 255, 0.567);
     inset: 0;
