--- a/src/view/splice-homepage/component/heading/styles.module.scss
+++ b/src/view/splice-homepage/component/heading/styles.module.scss
@@ -102,8 +102,30 @@
       background-repeat: no-repeat;
       background-size: cover;
       width: 100%;
-      border-radius: 40px;
       height: 652px;
+      // border-radius: 42.13px;
+      position: relative;
+    }
+    .spliceImage::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      border: 3.16px solid transparent;
+      border-bottom: none;
+      border-image: linear-gradient(
+          151.22deg,
+          #b49017 10.91%,
+          #59928c 59.05%,
+          #e3e3e3 107.19%
+        )
+        1;
+      border-image-slice: 1;
+      border-radius: 40px;
+      border-radius: 42.13px;
+      pointer-events: none;
     }
     .spliceVideo {
       background-image: url("../../../../../public/Capture\ d’écran\ 2025-06-23\ à\ 14.27.12\ 1.svg");
@@ -205,6 +227,7 @@
       gap: 24.8px;
       .testemonial_one {
         width: 100%;
+        max-width: 100%;
         height: 436px;
         overflow: hidden;
         position: relative;
@@ -213,6 +236,7 @@
           object-fit: cover;
           height: 100%;
           display: block;
+          // opacity: 80%;
         }
         .header {
           position: absolute;
@@ -259,5 +283,4 @@
       }
     }
   }
-
 }
